--- a/index.html
+++ b/index.html
@@ -11,13 +11,55 @@
 <body>
     <div class="container">
         <div class="container-1">
-            
             <div class="logo">
                 <img class="logo-img" src="icons8-palm-tree-96.png" alt="palm">
                 &nbsp;&nbsp;&nbsp;ODIN
             </div>
         </div>
-        <div class="container-2">b</div>
+        <div class="container-2">
+            <div class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa dolores a distinctio ratione nam sint maiores modi facilis molestias qui doloremque dolorum laboriosam facere, quisquam reprehenderit vel nulla veritatis consequuntur officiis sunt obcaecati fuga suscipit ullam atque. Quaerat minima voluptate assumenda reprehenderit quae labore in, libero, ipsa dignissimos, totam tempore!<br> <br> Let's do this!</div>
+            <div class="form-container">
+                <p>Go on then</p>
+                <form action="#" class="form-1">
+                    <div class="sec-1">
+                        <div class="sec-1-1">
+                            <label for="firstName">FIRST NAME</label>
+                            <input type="text" id="firstName">
+                        </div>
+                        <div class="sec-1-2">
+                            <label for="lastName">LAST NAME</label>
+                            <input type="text" id="lastName">
+                        </div>
+                    </div>
+                    <div class="sec-1">
+                        <div class="sec-1-1">
+                            <label for="email">EMAIL</label>
+                            <input type="text" id="email">
+                        </div>
+                        <div class="sec-1-2">
+                            <label for="phone">PHONE NUMBER</label>
+                            <input type="text" id="phone">
+                        </div>
+                    </div>
+                    <div class="sec-1">
+                        <div class="sec-1-1">
+                            <label for="password">PASSWORD</label>
+                            <input type="text" id="password">
+                        </div>
+                        <div class="sec-1-2">
+                            <label for="password">CONFIRM PASSWORD:</label>
+                            <input type="text" id="password">
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+            <div class="sign-up">
+                <button id="signup" href="#">Create Account</button>
+                <p>Got Account? <a href="#">Sign in</a></p>
+                
+            </div>
+        </div>
     </div>
 </body>
 </html>
